chrome scrollbar bug fixed - now hidden; also updated download Resume pdf

--- a/src/base_stylesheets/styles.css
+++ b/src/base_stylesheets/styles.css
@@ -1,4 +1,16 @@
 /* base CSS */
+html {
+    overflow: scroll;
+    overflow-x: hidden;
+}
+::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
+}
+/* optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+    background: #FF0000;
+}
 
 img {
     display: block;
